# mystbot

./: .gitignore  .gitmodules  Cargo.toml  Dockerfile  README.md
bot/: Cargo.toml
bot/sql-track/: 0000-base-schema.sql
bot/src/: audio_common.rs  cached_file.rs  context_ext.rs  fruityger_common.rs  fruityger_inline_query.rs  fruityger_inline_send.rs  lucida_common.rs  lucida_inline_query.rs  lucida_inline_send.rs  main.rs
bot/src/modules/: mod.rs  track.rs
core/: Cargo.toml
core/src/: client_wrapper.rs  error.rs  inline_audio.rs  inline_message_ext.rs  inline_query.rs  lib.rs
